--- a/style.css
+++ b/style.css
@@ -2779,4 +2779,7 @@ ul.footer-social li a i {
     .header-logo{
         float: none !important;
     }
+    .mt-sm-200{
+        margin-top: 200px !important;
+    }
 }
