--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -303,9 +303,22 @@
         padding: 0px 30px;
     }
 
-    ul.header-cta-btn {
-        display: none;
+    .khalif-main-manu-content {
+        display: flex;
+        flex-direction: column;
     }
+    
+    ul.header-cta-btn.float-right {
+        display: flex;
+        margin: 0;
+        justify-content: space-between;
+        position: relative;
+    bottom: 90px;
+    }
+
+    /* ul.header-cta-btn {
+        display: block;
+    } */
 
     .khalif-header-wrape {
         top: 30px;
