--- a/style.css
+++ b/style.css
@@ -380,7 +380,7 @@ label {
 .sticky {
     left: 0;
     margin: auto;
-    position: fixed;
+    /* position: fixed; */
     top: 0;
     width: 100%;
     z-index: 99;
@@ -427,7 +427,7 @@ ul.header-cta-btn li a i {
 ul.header-cta-btn {
     margin: 30px 0;
     display: flex;
-    align-items: center;
+    /* align-items: center; */
 }
 
 ul.header-cta-btn li {
@@ -2832,9 +2832,9 @@ ul.footer-social li a i {
     margin-bottom: 4px;
     padding-left: 8px;
 }
-.fill-grey{
+/* .fill-grey{
     filter: grayscale(1);
-}
+} */
 /* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 600px) {
     .custom-width-mobile-logo{
